[tool.poetry]
name = "funbox-visited-links"
version = "0.1.0"
description = ""
authors = ["lereto <leretto91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pyyaml = "^6.0.1"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
